--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 # spring.data.mongodb.authentication-database= Authentication database name.
-spring.data.mongodb.database=grayshirts-test
+#spring.data.mongodb.database=grayshirts-test
+#spring.data.mongodb.database=grayshirts
 # spring.data.mongodb.field-naming-strategy = Fully qualified name of the FielNamingStrategy to use
 # spring.data.mongodb.grid-fs-database = GridFS database name.
-spring.data.mongodb.host=localhost
-# spring.data.mongodb.password = Login password of the mongo server
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#Login password of the mongo server
+#spring.data.mongodb.password =spr1nt
+#spring.data.mongodb.password =Gonpa84ar
+#spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enable=true
-#spring.data.mongodb.uri=mongodb://localhost/ejemplo  # Mongo database URI. When set, host and port are ignored.
-# spring.data.mongodb.username= Login user of the mongo server.
-
+spring.data.mongodb.uri=mongodb+srv://sprint:spr1nt@cluster0-zhqck.mongodb.net/test?retryWrites=true&w=majority
+#spring.data.mongodb.username=sprint
+#spring.data.mongodb.username=Gonpa
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8080
-
+# esa es la clave? creo que si
 spring.data.rest.base-path=#
+
